--- a/app/Tpl/fanwe/mobile/index/event_home.html
+++ b/app/Tpl/fanwe/mobile/index/event_home.html
@@ -1,5 +1,5 @@
 {if $event_list}
-<div class="cis_box">
+<div class="cis_box" style="display: none;">
     <h3 onclick="goto('{url x="youhui" r="event"}')">
     <img src="{$TMPL}/images/mobile/more.png" class="more">
     <span><img src="{$TMPL}/images/mobile/coupon.png">热门活动</span></h3>
