--- a/app/Tpl/fanwe/mobile/index/youhui_home.html
+++ b/app/Tpl/fanwe/mobile/index/youhui_home.html
@@ -1,6 +1,6 @@
 {if $youhui_list}
 <div class="blank"></div>
-<div class="cis_box">
+<div class="cis_box" style="display: none;">
     <h3 onclick="goto('{url x="youhui" r="fcate"}')"><img src="{$TMPL}/images/mobile/more.png" class="more">
     <span><img src="{$TMPL}/images/mobile/coupon.png">优惠券下载</span></h3>
     <div class="cis_trowlist couponlist">
