--- a/app/Tpl/fanwe/mobile/inc/mobile_inc_cart_list.html
+++ b/app/Tpl/fanwe/mobile/inc/mobile_inc_cart_list.html
@@ -1,48 +1,5 @@
-<div id="mobile_cart_list">
+<a id="mobile_cart_list">
     <style>
-        .mobile_deal_cart_row {width: 100%; position: relative; height: 68px; float:left; padding-bottom: 12px; padding-top:12px; border-bottom: 1px solid #ddd;}
-        .mobile_deal_cart_row > div {float:left;}
-        .mobile-deal-buy-desc {width: 60px; margin-left: 10px;}
-        .mobile-deal-buy-desc .cart-icon img{width: 50px;}
-        .mobile-deal-buy-desc .cart-title>a{text-overflow: ellipsis; width: 50px; height: 18px;
-            line-height:18px; display:block; overflow: hidden}
-        .mobile-cart-number { width: 100px; height: 53px; padding-top: 15px;}
-        .mobile-cart-number input {padding:1}
-        .mobile-deal-buy-price {width: 100px; height: 34px;
-            line-height:34px;}
-        .mobile-deal-buy-total {width: 100px; height: 34px;
-            line-height:34px;}
-        .mobile-deal-buy-del {position: absolute;right: 12px; bottom: 30px;}
-        .yhd_layout_footer {
-            position: fixed;
-            width: 100%;
-            height: 55px;
-            overflow: hidden;
-            border-top: 1px solid #e0e0e0;
-            bottom:0;
-            background:#fff;
-        }
-        .yhd_layout_footer .ab-left {position: absolute; left: 12px; font-size: 1em; width: 50px; height: 28px;
-            line-height:28px; top: 12px;}
-        .yhd_layout_footer .ab-left span { font-size: 16px; width: 50px; height: 28px; line-height: 28px;
-            text-align: center;}
-        .mobile_cart_warn {border: 1px solid #ff2f00;}
-        .yhd_layout_footer .ab-right {position: absolute; right:0;}
-        .yhd_layout_footer .ab-right span {
-            display: block;
-            width: 90px;
-            height: 100%;
-            line-height: 55px;
-            text-align: center;
-            background-color: #ff3c25;
-            color: #fff;
-            font-size: 1.6rem;
-        }
-        .yhd_layout_footer .ab-text {
-            line-height: 55px;
-            font-size: 1em;
-            padding-left: 80px;
-        }
     </style>
     <script src="/js/ios-prompt.js"></script>
     <script>
@@ -51,15 +8,12 @@
         })
     </script>
         {foreach from=$cart_list item=cart_item}
+        <a class="mobile-cart-title" href="{url x="shop" r="goods" p="id=$cart_item.deal_id"}" target="_blank" title="{$cart_item.name}">{function name="msubstr" v=$cart_item.name b=0 e=50}</a>
         <li class="deal_{$cart_item.deal_id} mobile_deal_cart_row" rel="cart_{$cart_item.deal_id}_{$cart_item.attr_str}">
             <div class="mobile-deal-buy-desc">
                 <div class="cart-icon f_l">
                     <a id="cartTitle" href="{url x="shop" r="goods" p="id=$cart_item.deal_id"}" target="_blank" title="{$cart_item.name}">
                     <img src="{function name="get_spec_image" v=$cart_item.icon w=100 h=100 g=1}" alt="{$cart_item.name}" />
-                    </a>
-                </div>
-                <div class="cart-title f_l">
-                    <a href="{url x="shop" r="goods" p="id=$cart_item.deal_id"}" target="_blank" title="{$cart_item.name}">{function name="msubstr" v=$cart_item.name b=0 e=50}
                     </a>
                 </div>
             </div>
