--- a/app/Tpl/fanwe/mobile/mobile_member.html
+++ b/app/Tpl/fanwe/mobile/mobile_member.html
@@ -2,43 +2,8 @@
 <body id="cis_list">
 <div class="body">
     {include file="moible/inc/header_feature1.html"}
-    <style>
-        .member-info { display: table; width: 100%; }
-        .ncp-member-info { overflow: hidden; width: 33%; background: #0078d8;
-            float: left;  }
-        .ncp-member-info .avatar { width: 55%; margin: 0 auto; padding-top: 10px; }
-        .ncp-member-info .avatar img { width: 100%; border-radius: 50%; border: 3px solid #fff; }
-        .ncp-member-info dl { display: block; float: left; width: 100%; font-size: .8125em; padding-bottom: 10px;
-            color: #fff; }
-        .ncp-member-info dt { margin-bottom: 6px; padding-top: 10px; text-align: center; color: #fff; }
-        .ncp-member-info dt a{ color:#fff; }
-        .ncp-member-info dd { text-align: center; font-size: 1em; line-height: 1.2em; color: #fff; }
-        .padding-list { width: 67% !important; float: left; }
-        .padding-list { width: 100%; overflow: hidden; background-color: #FFF; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); }
-        .padding-list li a { color: #a5a5a5; font-size: .8125em; text-decoration: none; display: table-cell; width: 100%;
-            height: 100%; vertical-align: middle; }
-        .padding-list li p:first-child { color: #F80808; }
-        .padding-list li { float: left; width: 50%; /* height: 3em; */ vertical-align: middle;
-            box-shadow: 1px 0 0 rgba(200, 200, 200, 0.6); text-align: center; display: table; position: relative; }
-        .menu-list { width: 100%; margin-top: 10px; background-color: #FFF; padding: .46875em .46875em; overflow: hidden;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); }
-        .menu-list li { float: left; width: 25%; /*padding: .46875em .46875em;*/ text-align: center; }
-        .menu-list li a { display: block; width: 100%; text-decoration: none; }
-        .menu-list li a img { width: 2.5em; height: 2.5em; display: block; margin: 0 auto .75em; }
-        .menu-list li p { font-size: .75em; color: #6a6a6a; text-align: center; line-height: 1.35em; }
-        .list-title { margin-top: 10px; color: #6a6a6a; padding-left: 15px; font-size: .8125em; height: 2.384615em;
-            line-height: 2.384615em; vertical-align: middle; background-color: #FFF; }
-        .yhd_logout {    display: block;
-            color: #fff;
-            height: 40px;
-            line-height: 40px;
-            margin: 20px 21px;
-            text-align: center;
-            background: #fe5955;
-            border-radius: 3px;}
-    </style>
     <div class="" style="padding-top: 50px;">
-    <div class="member-info">
+    <div class="mobile-member-info">
         <div class="ncp-member-info" style="">
             <div class="avatar">
                 {function name="show_avatar" uid=$user_id  type="big"}
@@ -49,7 +14,7 @@
                 <dd>当前等级：<strong id="level">{$level}</strong></dd>
             </dl>
         </div>
-        <ul class="padding-list">
+        <ul class="mobile-padding-list">
             <li style="">
                 <a href="javascript:void(0);">
                     <p>
@@ -90,11 +55,11 @@
                 var width = w_width*125/745;
                 $('.avatar img').css('height', width);
                 $('.avatar img').css('width', width);
-                $('.padding-list li').each(function(){
-                    $(this).height($('.member-info').height()/2);
+                $('.mobile-padding-list li').each(function(){
+                    $(this).height($('.mobile-member-info').height()/2);
                 });
-                var prevHeight = $('.member-info').height();
-                $('.member-info').attrchange({
+                var prevHeight = $('.mobile-member-info').height();
+                /*$('.member-info').attrchange({
                     callback: function (e) {
                         var curHeight = $(this).height();
                         if (prevHeight !== curHeight) {
@@ -105,11 +70,11 @@
                             prevHeight = curHeight;
                         }
                     }
-                }).resizable();
+                }).resizable();*/
             });
         </script>
 
-    <ul class="menu-list">
+    <ul class="mobile-menu-list">
         <li>
             <a href="{url x="shop" r="uc_order#index"}">
                 <img src="/images/jd_order.png" alt="">
@@ -117,10 +82,10 @@
             </a>
         </li>
 
-        <li style="display:none;">
-            <a href="favorites.html">
-                <img src="/images/jd_like.png" alt="">
-                <p>我的收藏</p>
+        <li style="">
+            <a href="{url x="shop" r="uc_money"}">
+                <img src="/images/jd_pack.png" alt="">
+                <p>帐户管理</p>
             </a>
         </li>
 
@@ -131,10 +96,10 @@
             </a>
         </li>
 
-        <li style="display:none;">
-            <a href="views_list.html">
-                <img src="/images/jd_check.png" alt="">
-                <p>浏览记录</p>
+        <li style="">
+            <a href="{url x="shop" r="uc_account"}">
+                <img src="/images/jd_setting.png" alt="">
+                <p>帐户设置</p>
             </a>
         </li>
 
