--- a/app/Tpl/fanwe/mobile/mobile_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_index.html
@@ -34,11 +34,11 @@
             <ul class="cl">
                 <li><a href="{$APP_ROOT}/youhui.php?ctl=store"><img src="{$TMPL}/images/mobile/bn1.png" /><br />店铺</a></li>
                 <li><a href="{$APP_ROOT}/index.php?ctl=goods&act=goods_list&cid=0"><img src="{$TMPL}/images/mobile/bn2.png" /><br />新品</a></li>
-                <li><a href="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=hot"><img src="{$TMPL}/images/mobile/bn3.png" /><br />热门</a></li>
-                <li><a href="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=recommend"><img src="{$TMPL}/images/mobile/bn4.png" /><br />推荐</a></li>
-                <li><a href="{$APP_ROOT}/youhui.php?ctl=event"><img src="{$TMPL}/images/mobile/bn5.png" /><br />活动</a></li>
-                <li><a href="{$APP_ROOT}/youhui.php?ctl=fcate"><img src="{$TMPL}/images/mobile/bn6.png" /><br />优惠</a></li>
-                <li><a href="{$APP_ROOT}/tuan.php"><img src="{$TMPL}/images/mobile/bn7.png" /><br />团购</a></li>
+                <li><a href="javascript:alert('即将推出, 敬请期待')" bhref="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=hot"><img src="{$TMPL}/images/mobile/bn3.png" /><br />热门</a></li>
+                <li><a href="javascript:alert('即将推出, 敬请期待')" bhref="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=recommend"><img src="{$TMPL}/images/mobile/bn4.png" /><br />推荐</a></li>
+                <li><a href="javascript:alert('即将推出, 敬请期待')" bhref="{$APP_ROOT}/youhui.php?ctl=event"><img src="{$TMPL}/images/mobile/bn5.png" /><br />活动</a></li>
+                <li><a href="javascript:alert('即将推出, 敬请期待')" bhref="{$APP_ROOT}/youhui.php?ctl=fcate"><img src="{$TMPL}/images/mobile/bn6.png" /><br />优惠</a></li>
+                <li><a href="{$APP_ROOT}/index.php?ctl=goods&act=tuans_list"><img src="{$TMPL}/images/mobile/bn7.png" /><br />团购</a></li>
                 <li><a href="{$APP_ROOT}/index.php?ctl=uc_center"><img src="{$TMPL}/images/mobile/bn8.png" /><br />我的</a></li>
             </ul>
         </div>
