--- a/app/Tpl/fanwe/mobile/mobile_uc_order.html
+++ b/app/Tpl/fanwe/mobile/mobile_uc_order.html
@@ -219,7 +219,7 @@
                             </div>
                             <div class="order-shop-pd">
 
-                                <a class="order-ldetail clearfix " href="http://m.kakasell.com/tmpl/product_detail.html?goods_id=361">
+                                <a class="order-ldetail clearfix " href="">
                                     <div class="order-pdinfor">
                                         {function name="get_order_item_list" value=$order.id}
                                     </div>
